--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-516-known
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="https://wa.me/+923133887487" target="_blank"><i class="fa fa-phone"></i> +92 313 3887487</a></li>
+                         <li><a href="https://wa.me/+923133887487" target="_blank"><i class="fa fa-phone"></i>Join US</a></li>
                     </ul>
                </div>
 
